<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grass_bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/imageBgContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="37">

        <ImageView
            android:id="@+id/bg_image"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/paw_bg" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fieldsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:orientation="horizontal">

        <View
            android:id="@+id/void2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" />

        <RelativeLayout
            android:id="@+id/centerFieldsContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80">

            <EditText
                android:id="@+id/userEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                style="@style/customEditText" />

            <EditText
                android:id="@+id/userPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:maxLength="30"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                style="@style/customEditText" />
        </RelativeLayout>

        <View
            android:id="@+id/void3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logAndSignContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="50"
            android:maxLength="30"
            android:background="@drawable/button_main_bg"
            android:elevation="4dp"
            android:gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/signUpButtonText"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/logInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="50"
            android:maxLength="16"
            android:background="@drawable/button_main_bg"
            android:elevation="4dp"
            android:gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/logInButtonText"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/socialContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25">


        <ImageView
            android:id="@+id/instaImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:elevation="4dp"
            app:srcCompat="@drawable/insta_brown" />

        <ImageView
            android:id="@+id/twitterImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="35dp"
            android:layout_toStartOf="@id/instaImage"
            app:srcCompat="@drawable/twitter_brown" />

        <ImageView
            android:id="@+id/fbImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="35dp"
            android:layout_toEndOf="@id/instaImage"
            app:srcCompat="@drawable/fb_brown" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:textColor="@color/brown_300"
            android:layout_above="@+id/instaImage"
            android:layout_marginBottom="15dp"
            android:text="@string/socialText" />
    </RelativeLayout>

    <TextView
        android:id="@+id/copyrightText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/brown_500"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/white" />
</LinearLayout>